<resources>
    <string name="app_name">DRIVE360</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="intro">Discover the ultimate solution for all your driver-related needs. With our comprehensive range of services, we strive to make your journey safer, more convenient, and efficient.</string>
    <string name="drivers_types">• Truck drivers\n• Bus drivers\n• Heavy vehicle drivers\n• Three-wheeler drivers\n• Car drivers</string>
    <string name="on_demand">Need a driver for a specific duration? Look no further. Our app provides on-demand driver services, allowing you to hire skilled drivers for any timeframe, whether it\'s for a day, a week, or even longer.</string>
    <string name="fleet_management">Our advanced fleet management system combines cutting-edge hardware and software to empower vehicle owners with complete control and visibility over their fleet.\nKey features include:\n\n• Real-time vehicle tracking: Monitor the live location of your vehicles at any time.\n\n• Fuel tracking: Keep track of fuel consumption, expenses, and optimize your fleet\'s efficiency.\n\n• Driver management: Stay informed about driver schedules, performance, and ensure timely maintenance.\n\n• Engine heat tracking: Monitor engine temperature to prevent overheating and potential issues.\n\n• By leveraging our app\'s features, you can streamline your operations, increase productivity, and enhance overall safety. Experience hassle-free driving and efficient fleet management like never before.</string>
    <string name="fuel_tracking_1">It is estimated that losses due to fuel theft are in the region of $135 billion dollar. On average, logistics companies spend from 30% to 50% of their budget on diesel and other fuels and lubricants. At a price of 2,36 USD per liter of diesel fuel, the annual consumption for one car will cost more than 28 520 USD. Small carriers usually have a fleet of five cars and large companies have thousands of them.</string>
    <string name="fuel_tracking_2">On average, the company\'s losses due to intruders from one car total up to 5 626 USD a year - which means that half of all fuel expenses of the company go to waste, without the knowledge of the general director.</string>
    <string name="fuel_tracking_3">Most types of theft can be divided into three categories and they are the same all over the world:</string>
    <string name="fuel_tracking_4">This usually happens like this: the driver signs a document or makes an agreement with a gas station attendant to fill the tank allegedly with more gasoline or diesel than it actually is. Then the driver sells the unfilled balance at a markup, and then shares the money with the gas station attendant.</string>
    <string name="fuel_tracking_5">To drain the excess fuel, drivers fake the odometer or runtime meter data. Special devices are used for this purpose: correctors and programmers. When the data is \"corrected,\" the drivers drain the fuel directly from the gas tank into a canister, and then sell it. As a rule they do it in off-hours or during the trip.</string>
    <string name="fuel_tracking_6">Slightly more complicated way than a direct drain. The fuel system is designed so that if some of the gasoline or diesel is not burned by the engine, it returns to the tank - and so on in a circle. Drivers can build a tee into this system, to which they connect a hose and drain the fuel. Dumping \"off the back\" is detrimental not only to the company\'s budget, but also to the car - because it creates a risk of fire.</string>
    <string name="fuel_tracking_7">The most accurate and reliable way to determine if there was a theft is to install a fuel level sensor (FLS) in your car. Such a sensor works at temperatures from -60°C to +80°C, and measures the volume of fuel with an accuracy of 1%.\n\nBesides, the device transmits data in real time - so the company will not have to send mechanics to the car to check fuel level in the tank.</string>
    <string name="fuel_tracking_8">The Escort Group offers the Escort TD-BLE sensor. It works on wireless Bluetooth Low Energy (BLE) technology, thanks to which engineers do not need to lay wiring along the car body - just install the sensor in the fuel tank. Malefactors won\'t be able to damage the wires, and the company can save on installation costs.</string>
    <string name="fuel_tracking_9">BLE technology allows the sensor to work not only without wiring, but also without additional power. One battery charge will last for 7 years of operation of the device.</string>
    <string name="dumping_from_the_back">• Dumping \"from the back\"</string>
    <string name="On_demand_1">Want to go on a trip or ride and find drivers according to your time duration? don\'t worry!\n\nWe also provide on demand driver service.</string>
    <string name="On_demand_2">Fill the form to book a ride.\nIf you provide your own car for ride, then cost to provide a driver is rs3000 /day.\nIf own company provide both car and driver then cost will depend according to the distance travelled + driver charge.</string>
    <string name="fleet">Our advanced fleet management system combines cutting-edge hardware and software to empower vehicle owners with complete control and visibility over their fleet.\nKey features include:\n</string>
</resources>