<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.OnDemandFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Fleet Management System"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:fontFamily="sans-serif-black"
            android:textAlignment="center"
            android:layout_marginBottom="40dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/orderNowButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="40dp"
            android:layout_gravity="center"
            android:layout_marginBottom="40dp"
            android:background="@drawable/round_rectangle"
            android:backgroundTint="@android:color/holo_orange_light"
            android:text="Order Now" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="How much companies lose on fuel theft?"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fuel_tracking_1"
            android:textColor="@color/black"
            android:layout_marginBottom="15dp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/fuel_tracking_graph"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fuel_tracking_2"
            android:textColor="@color/black"
            android:layout_marginBottom="15dp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/fuel_tracking_img2"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="How malefactors steal fuel"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fuel_tracking_3"
            android:textColor="@color/black"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="• Underfueling"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fuel_tracking_4"
            android:textColor="@color/black"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="• Direct Draining"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fuel_tracking_5"
            android:textColor="@color/black"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dumping_from_the_back"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fuel_tracking_6"
            android:textColor="@color/black"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Solution"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@android:color/holo_green_dark"
            android:textAlignment="center"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fuel_tracking_7"
            android:textColor="@color/black"
            android:layout_marginBottom="10dp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:src="@drawable/fls_sensor"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fuel_tracking_8"
            android:textColor="@color/black"
            android:layout_marginBottom="10dp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/fuel_tracking_img4"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fuel_tracking_9"
            android:textColor="@color/black"
            android:layout_marginBottom="40dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/orderNowButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="40dp"
            android:layout_gravity="center"
            android:layout_marginBottom="40dp"
            android:background="@drawable/round_rectangle"
            android:backgroundTint="@android:color/holo_orange_light"
            android:text="Order Now" />
        
    </LinearLayout>

</ScrollView>